feat: add uuid endpoint
