# internal/docs/swagger.json
@@ -30,6 +30,37 @@
                     }
                 }
             }
+        },
+        "/programming/uuid": {
+            "post": {
+                "description": "create a new UUID",
+                "consumes": [
+                    "\"*/*\""
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "programming"
+                ],
+                "summary": "create a new UUID",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "whether to exclude hyphens in the UUID",
+                        "name": "no-hyphens",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/programming.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -37,6 +68,14 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "programming.Response": {
+            "type": "object",
+            "properties": {
+                "uuid": {
                     "type": "string"
                 }
             }
